* 新增:
    01.新增 DecSpaceMap 可以将多个Map合并成一个Map对象给予操作,每个子map可以通过一个空间字符串进行标识。
    02.AbstractSettings 类增加 resetValues 方法,可以通过 UpdateValue 接口更新载入的配置文件数据,一个典型的应用场景是模版化配置文件。
    03.支持配置文件模版化,通过模版化的配置文件。可以在不修改部署包的前提下,替换配置文件的值。使其可以方便的适用于各种环境,例如:日常、预发、线上、隔离。    
    04.新增 @InjectSettings 注解,支持配置文件数据注入。
    05.Restful、Template、mime 三个小插件整合到一起,提升为 webmvc 框架,编程接口依然以 Restful 为标准。
    06.依赖注入支持 WebAppContext、WebEnvironment 两个接口的注入。
* 改进:
    01.配置文件加载在原有xml格式下新增 "属性类型" 文件的加载支持，属性文件默认采用UTF-8编码方式读取。
    02.Settings 接口的两个 findClass 方法移动到 Environment 接口中,Settings的职责更佳明确,只负责配置文件相关的操作。
    03.删除 AbstractMergeSettings 不在需要该类承担数据的职责,Settings的数据承载交给 DecSpaceMap。
    04.Settings 小范围重构,内部的数据管理更佳清晰。
    05.StartupModule插件的类装载,使用 Environment 接口提供的。
    07.Resource 插件被拆分成两个部分,web相关的部分与新成立的 Restful 框架整合到一起。资源加载部分沉淀到 org.more 工具包。

===== Hasor-Core v2.3.3 (2016-06-16)
* 新增:
    01.新增@ImplBy接口，用于方便接口注入。

===== Hasor-Core v2.3.2 (2016-05-29)
* 新增:
    01.新增@ImplBy接口，用于简化接口类型Bind。
* 改进:
    01.事件机制，callBack.handleComplete的调用实际改为，事件处理结束。
    02.一些方法的注释进行更正。
    03.新增datachain工具，可以脱离Hasor使用：数据对象转换工具，提供 A 类型对象到 B 类型对象转换功能。并使开发者在转换过程中可以实现更加高级别的控制协调能力。
    04.Result增加一系列Message相关方法。
    05.插件智能载入。所有内置插件，在初始化的时都做了配置检查，只有用到了它们才会被加载到框架中。否则内置插件在初始化期间就会放弃加载自己。
    
===== Hasor-Core v2.3.1 (2016-04-13)
* 修复:
    01.Fix ：AbstractMergeSettings在刷新加载配置文件的时，因为map无序而导致。主配置文件被率先放入最终结果集中，正常的逻辑应该是最后放入。

===== Hasor-Core v2.3.0 (2016-04-06)
* 新增:
    01.新增“.hasor.default.asEagerSingleton”配置用来配置默认情况下，类型是以单例模式运行还是以原型方式运行。（默认单例模式）
    02.ApiBinder接口新增“asEagerPrototype”方法用来强制以原型方式注册。到目前为止可以选择的方式有：“asEagerSingleton”、“asEagerPrototype”
    03.新增注解配置：@Singleton、@Prototype
    04.单例类如果配置了@Init注解,则在注册到Hasor容器时，会在容器启动的第一时间自动调用init方法以完成对象初始化功能。
        - 这个特性类似Spring配置文件中 init属性的功能。
    05.Hasor启动类新增传入File参数方式指定配置文件。
* 改进:
    01.容器在启动时增加EventContext类型的绑定，开发的时候可以直接通过依赖注入或者appContext.getInstance(EventContext.class)方式的到。
    02.Event插件在接收到事件响应时，需要一直等待AppContext对象被注入进来。原有逻辑是等待10秒注入AppContext对象。
    03.优化EventModule启动时间。