@@ -51,7 +51,7 @@
         <startup></startup>
 
         <!-- web上提供restful风格开发Api【由RestfulModule插件提供】 -->
-        <restful urlPatterns="htm;html;do;" renderPatterns="htm;html;" useLayout="true" resourcePatterns=";" forceRefreshCache="false">
+        <restful urlPatterns="htm;html;do;" useLayout="true" resourcePatterns=";" forceRefreshCache="false">
             <!-- 渲染器 -->
             <renderSet>
                 <render renderType="json">net.hasor.restful.render.JsonRenderEngine</render>
